version/0.4/_sources/api/ansys/geometry/core/tools/problem_areas/ProblemArea.rst.txt




ProblemArea
===========

.. py:class:: ProblemArea(id: str, grpc_client: ansys.geometry.core.connection.GrpcClient)
   :canonical: ansys.geometry.core.tools.problem_areas.ProblemArea





   Represents problem areas.


   :Parameters:

       **id** : :class:`python:str`
           Server-defined ID for the problem area.

       **grpc_client** : :obj:`GrpcClient`
           Active supporting geometry service instance for design modeling.














   ..
       !! processed by numpydoc !!













Overview
--------
.. py:currentmodule:: ProblemArea
.. tab-set::

    .. tab-item:: Abstract methods

        .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~fix`
            - Fix problem area.




    .. tab-item:: Properties

        .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~id`
            - The id of the problem area.






Import detail
-------------

.. code-block:: python

    from ansys.geometry.core.tools.problem_areas import ProblemArea


Property detail
---------------
.. py:property:: id
   :canonical: ansys.geometry.core.tools.problem_areas.ProblemArea.id
   :type: str


   
   The id of the problem area.
















   ..
       !! processed by numpydoc !!




Method detail
-------------
.. py:method:: fix()
   :abstractmethod:

   
   Fix problem area.
















   ..
       !! processed by numpydoc !!


